# Modular-Swarm

./: .gitignore  OLYMPUS_INTEGRATION.md  README.md  docker-compose.swarm.yml  run-command-station.sh
blinky/: build.sh
coap_client/: CMakeLists.txt  build.sh  prj.conf
coap_server/: Kconfig  build.sh  prj.conf
coap_server/boards/: xiao_ble.overlay
coap_server/src/: coap_server.c  gps.c  gps.h  jetson_link.c  jetson_link.h  protocol.h  sensor_registry.c  sensor_registry.h
jetson_agent/: README.md  __init__.py  __main__.py  agent.py  coordination.py  detections.py  ekf.py  mission.py  nrf_link.py  override.py  peers.py  sensors.py
jetson_agent/vio/: __init__.py  base.py  detect.py  null.py  realsense.py
jetson_perception/: __init__.py  __main__.py  detector.py
olympus/: .env.example  .gitignore  README.md  docker-compose.swarmfix.yml  docker-compose.yml  rebuild-dashboard.sh  zenoh.json5
olympus/brain/: Dockerfile  pyproject.toml
olympus/brain/olympus_brain/: __init__.py  advisor.py  ai_agent.py  api.py  athena.py  camera_detector.py  cbba.py  cli_register.py  comms_monitor.py  detection_buffer.py  escalation.py  executor.py  jetson_sar.py  mavlink_tunnel.py  mission_planner.py  mission_profile.py  navigation.py  node.py  orca.py  partitioning.py  protocol.py  scout.py  swarm_consensus.py  swarmnet.py
olympus/brain/tests/: test_imports.py
olympus/bridge/: Cargo.toml  Dockerfile
olympus/bridge/src/: bridge.rs  config.rs  elrs.rs  lib.rs  lora.rs  main.rs  mavlink_handler.rs  protocol.rs  telemetry.rs  zenoh_handler.rs
olympus/dashboard/: .env.example  Dockerfile  craco.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js
olympus/dashboard/public/: index.html
olympus/dashboard/src/: App.css  App.js  index.js
olympus/dashboard/src/components/: AiChat.jsx  AlertStack.jsx  CommandBar.jsx  DetectionPanel.jsx  DrawingTools.jsx  ErrorBoundary.jsx  FleetPanel.jsx  HeaderBar.jsx  LayoutShell.jsx  LoadingScreen.jsx  LocationPrompt.jsx  MetricsPanel.jsx  OverlayManager.jsx  Overwatch.jsx  TelemetryGraph.jsx  VehicleDetail.jsx  index.js
olympus/dashboard/src/hooks/: useMetrics.js  useVehicleApi.js  useZenoh.js  useZenohPolling.js
olympus/dashboard/src/instances/: index.js
olympus/dashboard/src/instances/athena/: config.js  executors.js  index.js  integrations.js  models.js  ui.js
olympus/dashboard/src/instances/ceres/: config.js  executors.js  index.js  integrations.js  models.js  ui.js
olympus/dashboard/src/instances/hermes/: config.js  executors.js  index.js  integrations.js  models.js  ui.js
olympus/dashboard/src/instances/vulcan/: config.js  executors.js  index.js  integrations.js  models.js  ui.js
olympus/dashboard/src/store/: fleetStore.js
olympus/dashboard/src/utils/: detectionGenerator.js  environmentGenerator.js  farmGenerator.js  pathPlanner.js  voronoiGenerator.js
olympus/hardware/: olympus_mount.py
olympus/hardware/exports/: Battery_Sled.stl  CameraMount_AR0234.stl  DroneCAN_M9N.stl  ESC_Cradle_NE.stl  ESC_Cradle_NW.stl  ESC_Cradle_SE.stl  ESC_Cradle_SW.stl  GPS_Mast.stl  OlympusMount_v5.20260210-161124.FCBak  OlympusMount_v5.FCStd  OlympusMount_v5_Assembly.step  PDB_Tray.stl  RTK_Module.stl  TopLid.stl
olympus/vehicle-api/: Cargo.toml  Dockerfile  Dockerfile.swarmfix  openapi.yaml
olympus/vehicle-api/src/: config.rs  error.rs  main.rs  metrics.rs  models.rs  state.rs  zenoh_client.rs
olympus/vehicle-api/src/middleware/: auth.rs  rate_limit.rs
olympus/vehicle-api/src/routes/: advisor.rs  ai_agent.rs  detections.rs  health.rs  metrics.rs  mission.rs  mod.rs  vehicles.rs  webhooks.rs
olympus/vehicle-api/src/ws/: mod.rs  telemetry_stream.rs
olympus_link/: README.md  __init__.py  __main__.py  autorouter.py  commands.py  config.py  localization.py  model.py  olympus_client.py  serial_link.py  service.py
proto/: swarm_proto.py  swarm_protocol.h  test_proto.py
shell_module/: prj.conf
sim/: swarm_sim.py  test_coordination.py  test_e2e.py  test_ekf.py  test_integration.py  test_jetson_ekf.py  test_mission.py  test_perception.py
swarm_link/: Dockerfile  README.md
swarm_node/: CMakeLists.txt  Kconfig  README.rst  build.sh  overlay-gateway.conf  overlay-leader.conf  prj.conf  sample.yaml
swarm_node/boards/: nrf52840dk_nrf52840.overlay  xiao_ble.overlay
swarm_node/src/: bno055.c  bno055.h  ekf.c  ekf.h  ranging.c  ranging.h  sensors.c  sensors.h  serial_link.c  serial_link.h  swarm_coap.c  swarm_coap.h  swarm_main.c  swarm_node.h
tools/: README-autostart.md  README-camera.md  install-autostart.sh  people_detect.py  requirements-jetson.txt  rgbd_vio.py  swarm-node.env.example  swarm-node.service  swarm-perception.service  swarm_boot.py  web_monitor.py
