[package]
name = "vehicle-api"
version = "0.1.0"
edition = "2021"
authors = ["OLYMPUS OS Team"]
description = "Axum-based HTTP/WebSocket API Gateway for OLYMPUS OS drone fleet coordination"
license = "MIT"

[[bin]]
name = "vehicle-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
zenoh = { version = "0.11", features = ["default"] }
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-stream = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
rmp-serde = "1.1"
olympus-bridge = { path = "../bridge" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
